Deactivated on workflow_call

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -20,7 +20,7 @@ on:
     # Remove the line above to run when pushing to main
   pull_request:
     branches: [main]
-  workflow_call:
+  # workflow_call:
 
 ###############
 # Set the Job #
