--- a/.github/workflows/use-custom-actions.yml
+++ b/.github/workflows/use-custom-actions.yml
@@ -54,4 +54,4 @@ jobs:
         with:
           repoToken: ${{secrets.GITHUB_TOKEN}}
           catFact: ${{steps.cat.outputs.fact}}
-          issue-title: "A joke for you from custom actions workflow" 
+          issueTitle: "A joke for you from custom actions workflow" 
